# PandoraAgent

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
agent/: context.py  core.py  executor.py  prompt.py
agent/skills/: loader.py  manager.py
agent/skills/builtin/conversation-monitor/: SKILL.md
agent/skills/builtin/marketing-reply/: SKILL.md
agent/tools/: __init__.py  base_tool.py  calibration_tool.py  copy_tool.py  manager.py  message_extract_tool.py  red_dot_tool.py  reply_tool.py  scroll_tool.py  send_tool.py  sentry_tool.py  window_tool.py
api/: agent_api.py  calibration_api.py  config_api.py  sse_api.py
automation/: clipboard.py  humanize.py  vision.py  window.py
config/: defaults.json  defaults.py  defaults.yaml  settings.py
db/: connection.py  models.py  repositories.py
tests/: test_defaults.py
utils/: logger.py  security.py
web/pages/: calibration.html  config.html  index.html  monitor.html  templates.html  wechat-config.html
web/static/css/: main.css
web/static/js/: app.js  calibration.js  config.js  monitor.js  templates.js  wechat-config.js
