[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "wechat-assistant-agent"
version = "0.1.0"
description = "WeChat desktop automation agent with LLM-powered reply"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pyyaml>=6.0",
    "httpx>=0.27.0",
    "pyautogui>=0.9.53",
    "pyperclip>=1.8.2",
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
    "pillow>=10.0.0",
    "cryptography>=41.0.0",
    "sqlalchemy>=2.0.0",
    "jinja2>=3.1.0",
    "aiofiles>=23.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
]
build = [
    "pyinstaller>=6.0.0",
]

[tool.setuptools.packages.find]
include = ["config*", "agent*", "automation*", "db*", "services*", "api*", "utils*"]
